2007-09-03 Raphael Neider <rneider AT web.de>

	* device/include/pic16/pic18f248.h,
	* device/include/pic16/pic18f258.h,
	* device/include/pic16/pic18f448.h,
	* device/lib/pic16/libdev/pic18f248.c,
	* device/lib/pic16/libdev/pic18f258.c,
	* device/lib/pic16/libdev/pic18f448.c: fixed TRISEbits,
	  added T0CONbits, fixes #1786891

2007-08-29 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/ds390/gen.c (genFarPointerSet),
	* src/hc08/ralloc.c (packRegisters),
	* src/mcs51/ralloc.c (packRegisters),
	* src/SDCCcse.c (cseBBlock): check if result is a symbol first to fix
	  bug 1750318
	* src/SDCCicode.h: POINTER_SET can be true for literals too
	* support/regression/tests/bug1750318.c: new, added

2007-08-23 Borut Razem <borut.razem AT siol.net>

	* debugger/mcs51/sdcdb.c: fixed compilation with older readline
	  library versions without the completition functionality

2007-08-22 Raphael Neider <rneider AT web.de>

	* device/include/pic16/pic18f1220.h,
	* device/lib/pic16/libdev/pic18f1220.c: applied patch #1776191

2007-08-12 Borut Razem <borut.razem AT siol.net>

	* debugger/mcs51/Makefile.in: support/Util/SDCCerr.[ch] moved to src

2007-08-11 Borut Razem <borut.razem AT siol.net>

	* support/Util/SDCCerr.c, support/Util/SDCCerr.h, src/src.dsp,
	  src/Makefile.in, src/Makefile.bcc, support/scripts/listerr.c:
	  support/Util/SDCCerr.[ch] moved to src
	* as/hc08/as_hc08.dsp, as/link/hc08/link_hc08.dsp,
	  as/link/z80/linkgbz80.dsp, as/link/z80/linkz80.dsp,
	  device/examples/ds390/tinitalk/tinitalk.dsp,
	  device/examples/serialcomm/windows/serialcomm.dsp,
	  support/librarian/librarian.dsp:
	  removed linking of unused odbc32.lib and odbccp32.lib
	* support/scripts/winres.h:
	  added for compilation with Visual C++ 2005 Express Edition

2007-08-09 Jesus Calvino-Fraga <jesusc at ece.ubc.ca>

	* device/include/mcs51/at89c51ed.h: Fixed typo in declarations of CKCON0
	  and CKCON1.

2007-08-07 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
